# aiops-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.agent.yml  pyproject.toml
agent/: __init__.py  config.py  db.py  server.py  utils.py
agent/agents/: __init__.py  experts.py  graph.py  reflect.py  state.py  supervisor.py
agent/tools/: __init__.py  mcp_server_git.py  mcp_server_jaeger.py  mcp_server_loki.py  mcp_server_prometheus.py  tool_config.py  tool_loader.py
docker/: docker-compose.yml
docker/config/: grafana-datasources.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml
microservices/: pom.xml
microservices/gateway-service/: pom.xml
microservices/gateway-service/src/main/java/com/aiops/gateway/: GatewayServiceApplication.java
microservices/gateway-service/src/main/java/com/aiops/gateway/client/: OrderClient.java
microservices/gateway-service/src/main/java/com/aiops/gateway/controller/: ApiController.java  FaultController.java
microservices/order-service/: pom.xml
microservices/order-service/src/main/java/com/aiops/order/: OrderServiceApplication.java
microservices/order-service/src/main/java/com/aiops/order/client/: UserClient.java
microservices/user-service/: pom.xml
microservices/user-service/src/main/java/com/aiops/user/: UserServiceApplication.java
scripts/: entrypoint.sh  fault_injector.py  run_accuracy_test.py  start.bat  test_e2e.py  test_graph.py  test_pipeline.py  test_tools.py
ui/: streamlit_app.py
(+4 files in other folders)
